--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 .navbar{
     width: 100%;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     z-index: 10;
@@ -29,7 +29,6 @@ nav .navbar-nav li a:hover{
     color: rgb(180, 179, 179) !important;
 }
 /*==================================================== Carosule CSS ==================================================== */
-
 .btn{
     padding: 15px 20px;
     border-radius: 50px;
